# bare-win-ui

./: .gitignore  CMakeLists.txt  README.md  binding.cc  index.js  package.json  runtime.js
.github/workflows/: prebuild.yml  test.yml
cmake/: windows-app-sdk.cmake
lib/: bootstrap.h  element.h  element.js  runtime.cc  runtime.manifest  web-view.h  web-view.js  window.h  window.js  windows-app-sdk.h
